--- a/index.html
+++ b/index.html
@@ -3,61 +3,180 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>9 Meses</title>
+    <title>9 Meses - Para meu Jacaré</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
     <style>
-        :root { --n-blue: #00d2ff; --n-red: #ff2d55; --n-green: #4cd964; --n-gold: #ffcc00; }
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { background: #000; color: #fff; font-family: 'Montserrat', sans-serif; height: 100dvh; overflow: hidden; position: fixed; width: 100%; }
-        #star-canvas { position: fixed; inset: 0; z-index: 1; pointer-events: none; }
-        .page { position: absolute; inset: 0; padding: 20px; display: flex; flex-direction: column; align-items: center; justify-content: center; opacity: 0; visibility: hidden; transition: 0.5s; z-index: 10; }
-        .page.active { opacity: 1; visibility: visible; }
-        .glass-card { background: rgba(15,15,15,0.95); border: 1px solid rgba(255,255,255,0.1); border-radius: 20px; padding: 18px; width: 100%; max-width: 400px; }
+        :root {
+            --n-blue: #00d2ff;
+            --n-red: #ff2d55;
+            --n-green: #4cd964;
+            --n-gold: #ffcc00;
+            --glass: rgba(15, 15, 15, 0.95);
+        }
+
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            -webkit-tap-highlight-color: transparent;
+        }
+
+        body {
+            background: #000;
+            color: #fff;
+            font-family: 'Montserrat', sans-serif;
+            height: 100dvh;
+            overflow: hidden;
+            position: fixed;
+            width: 100%;
+        }
+
+        #star-canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            pointer-events: none;
+        }
+
+        .page {
+            position: absolute;
+            inset: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+            z-index: 10;
+        }
+
+        .page.active {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .glass-card {
+            background: var(--glass);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            padding: 20px;
+            width: 100%;
+            max-width: 400px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+            backdrop-filter: blur(10px);
+        }
+
         .c-red { color: var(--n-red) !important; font-weight: bold; }
         .c-blue { color: var(--n-blue) !important; font-weight: bold; }
         .c-green { color: var(--n-green) !important; font-weight: bold; }
         .c-gold { color: var(--n-gold) !important; font-weight: bold; }
-        .nav-btn { background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.2); color: #fff; width: 50px; height: 50px; border-radius: 50%; cursor: pointer; margin: 10px; }
-        .nav-controls { position: fixed; bottom: 30px; z-index: 100; display: flex; }
+
+        .nav-controls {
+            position: fixed;
+            bottom: 40px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            gap: 20px;
+            z-index: 100;
+        }
+
+        .nav-btn {
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            color: #fff;
+            width: 55px;
+            height: 55px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            backdrop-filter: blur(5px);
+            transition: 0.3s;
+        }
+
+        .nav-btn:active {
+            transform: scale(0.9);
+            background: rgba(255, 255, 255, 0.2);
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); opacity: 0.8; }
+            50% { transform: scale(1.1); opacity: 1; }
+            100% { transform: scale(1); opacity: 0.8; }
+        }
+
+        #splash {
+            position: fixed;
+            inset: 0;
+            background: #000;
+            z-index: 9999;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .heart-icon {
+            font-size: 60px;
+            animation: pulse 1.5s infinite;
+            filter: drop-shadow(0 0 15px var(--n-red));
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
 
 <audio id="m1" src="foi-assim.mp3" loop></audio>
 <audio id="m2" src="musica2.mp3" loop></audio>
+
 <canvas id="star-canvas"></canvas>
 
-<div id="splash" style="position:fixed; inset:0; background:#000; z-index:9999; display:flex; flex-direction:column; align-items:center; justify-content:center; cursor:pointer;" onclick="app.start()">
-    <div style="font-size:50px; filter:drop-shadow(0 0 10px var(--n-red))">❤️</div>
-    <p style="margin-top:20px; font-size:0.7rem; letter-spacing:2px;">CLIQUE PARA INICIAR</p>
+<div id="splash" onclick="app.start()">
+    <div class="heart-icon">❤️</div>
+    <p style="margin-top:25px; font-size:0.75rem; letter-spacing:3px; color: rgba(255,255,255,0.6);">TOQUE PARA INICIAR</p>
 </div>
 
 <div id="pages-container">
-    <section class="page active">
-        <h1 style="font-family:'Playfair Display'; margin-bottom:15px;">Para meu <span class="c-green">Jacaré</span></h1>
-        <div class="glass-card" style="text-align:center; border-color:var(--n-gold); margin-bottom:15px;">
-            <div class="c-gold" style="font-size:1.2rem;">9 MESES</div>
+    <section class="page active" id="p0">
+        <h1 style="font-family:'Playfair Display'; font-size: 2.2rem; margin-bottom:20px;">Para meu <span class="c-green">Jacaré</span></h1>
+        <div class="glass-card" style="text-align:center; border-color:var(--n-gold); margin-bottom:20px; border-width: 2px;">
+            <div class="c-gold" style="font-size:1.3rem; letter-spacing: 2px;">9 MESES</div>
         </div>
-        <div class="glass-card"><div id="type-p1" style="font-size:0.85rem; line-height:1.5;"></div></div>
-    </section>
-
-    <section class="page">
-        <video id="v1" src="seu-video.mp4" loop playsinline style="width:100%; max-width:280px; border-radius:15px; margin-bottom:15px; border:1px solid var(--n-blue);"></video>
-        <div class="glass-card" id="type-p2" style="font-size:0.8rem; line-height:1.6;"></div>
-    </section>
-
-    <section class="page">
-        <h2 style="margin-bottom:20px;">Memórias</h2>
-        <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px; width:100%; max-width:380px;">
-            <div style="width:100%; aspect-ratio:1; background:var(--n-blue); border-radius:10px;"></div>
-            <div style="width:100%; aspect-ratio:1; background:var(--n-red); border-radius:10px;"></div>
+        <div style="width:140px; height:140px; border-radius:50%; border:3px solid var(--n-red); background:url('foto-capa.jpg') center/cover; margin-bottom:20px; box-shadow: 0 0 20px rgba(255,45,85,0.3);"></div>
+        <div class="glass-card">
+            <div id="type-p1" style="font-size:0.9rem; line-height:1.6; min-height: 60px;"></div>
         </div>
     </section>
 
-    <section class="page">
+    <section class="page" id="p1">
+        <video id="v1" src="seu-video.mp4" loop playsinline style="width:100%; max-width:300px; border-radius:20px; margin-bottom:20px; border:2px solid var(--n-blue);"></video>
+        <div class="glass-card" style="max-height:45vh; overflow-y:auto;">
+            <div id="type-p2" style="font-size:0.85rem; line-height:1.7; text-align:justify;"></div>
+        </div>
+    </section>
+
+    <section class="page" id="p2">
+        <h2 style="margin-bottom:25px; font-family:'Playfair Display'; font-size: 1.8rem;">Nossas Memórias</h2>
+        <div style="display:grid; grid-template-columns:1fr 1fr; gap:12px; width:100%; max-width:380px;">
+            <img src="foto1.jpg" style="width:100%; aspect-ratio:1; border-radius:12px; object-fit:cover; border:1px solid var(--n-blue);">
+            <img src="foto2.jpg" style="width:100%; aspect-ratio:1; border-radius:12px; object-fit:cover; border:1px solid var(--n-red);">
+            <img src="foto3.jpg" style="width:100%; aspect-ratio:1; border-radius:12px; object-fit:cover; border:1px solid var(--n-gold);">
+            <img src="foto4.jpg" style="width:100%; aspect-ratio:1; border-radius:12px; object-fit:cover; border:1px solid var(--n-green);">
+        </div>
+    </section>
+
+    <section class="page" id="p3">
         <div style="text-align:center;">
-            <p class="c-red" style="font-size:3rem;">eu te amo</p>
-            <p class="c-green" style="letter-spacing:5px; font-size:0.7rem;">PARA SEMPRE</p>
+            <div style="font-size:80px; margin-bottom:30px; filter: drop-shadow(0 0 20px var(--n-green));">🐊</div>
+            <p class="c-red" style="font-size:3.5rem; font-family:'Playfair Display';">eu te amo</p>
+            <p class="c-green" style="letter-spacing:8px; font-size:0.8rem; margin-top:10px;">PARA TODO O SEMPRE</p>
         </div>
     </section>
 </div>
@@ -70,55 +189,94 @@
 <script>
     const app = (() => {
         const TXT = {
-            p1: "Desde o dia 08 de Maio de 2025... <span class='c-red'>eu te amo</span>, minha <span class='c-green'>jacaré</span>! 🐊❤️",
-            p2: "Nove meses dos melhores da minha vida... <span class='c-red'>eu te amo</span>."
+            p1: "Desde o dia 08 de Maio de 2025, minha vida se tornou um reflexo do seu sorriso... <span class='c-red'>eu te amo</span>, minha <span class='c-green'>jacaré</span>! 🐊❤️",
+            p2: "E cá estamos minha princesaa, no nosso nono mês e foram definitivamente os melhores da minha vida. Cada momento ao seu lado é um presente que eu guardo com todo carinho. Obrigado por ser essa pessoa incrível que transforma meus dias. <span class='c-red'>eu te amo</span> muito!"
         };
+
         let cur = 0, typed2 = false;
         const m1 = document.getElementById('m1'), m2 = document.getElementById('m2');
 
         function fade(out, inv) {
             let v = 1;
+            inv.play();
+            inv.volume = 0;
             const t = setInterval(() => {
                 v -= 0.05;
                 out.volume = Math.max(0, v);
                 inv.volume = Math.min(1, 1-v);
-                if(v <= 0) { out.pause(); inv.play(); clearInterval(t); }
+                if(v <= 0) {
+                    out.pause();
+                    clearInterval(t);
+                }
             }, 100);
         }
 
         function typeEffect(text, elId, speed) {
-            let i = 0; const el = document.getElementById(elId);
+            let i = 0;
+            const el = document.getElementById(elId);
+            el.innerHTML = "";
             function run() {
                 if (i < text.length) {
-                    if (text[i] === '<') { 
-                        let end = text.indexOf('>', i); 
-                        el.innerHTML += text.substring(i, end + 1); 
-                        i = end + 1; 
-                    } else { el.innerHTML += text[i]; i++; }
+                    if (text[i] === '<') {
+                        let end = text.indexOf('>', i);
+                        el.innerHTML += text.substring(i, end + 1);
+                        i = end + 1;
+                    } else {
+                        el.innerHTML += text[i];
+                        i++;
+                    }
                     setTimeout(run, speed);
                 }
             }
             run();
         }
 
+        function initStars() {
+            const c = document.getElementById('star-canvas');
+            const ctx = c.getContext('2d');
+            c.width = window.innerWidth;
+            c.height = window.innerHeight;
+            const s = Array(100).fill().map(() => ({
+                x: Math.random() * c.width,
+                y: Math.random() * c.height,
+                v: 0.2 + Math.random() * 0.5
+            }));
+            function d() {
+                ctx.clearRect(0, 0, c.width, c.height);
+                ctx.fillStyle = "#fff";
+                s.forEach(p => {
+                    ctx.fillRect(p.x, p.y, 1.5, 1.5);
+                    p.y -= p.v;
+                    if (p.y < 0) p.y = c.height;
+                });
+                requestAnimationFrame(d);
+            }
+            d();
+        }
+
         return {
             start: () => {
                 document.getElementById('splash').style.display = 'none';
                 document.getElementById('controls').style.display = 'flex';
-                m1.play(); m1.volume = 1; m2.volume = 0;
-                typeEffect(TXT.p1, "type-p1", 40);
+                m1.play(); m1.volume = 1;
+                typeEffect(TXT.p1, "type-p1", 45);
+                initStars();
             },
             nav: (dir) => {
                 const pages = document.querySelectorAll('.page');
                 pages[cur].classList.remove('active');
-                cur = Math.max(0, Math.min(pages.length -1, cur + dir));
+                cur = Math.max(0, Math.min(pages.length - 1, cur + dir));
                 pages[cur].classList.add('active');
-                if(cur === 1) { 
-                    document.getElementById('v1').play(); 
-                    if(!typed2) { typeEffect(TXT.p2, "type-p2", 25); typed2 = true; }
-                    fade(m1, m2);
-                } else if (cur === 0 && m2.volume > 0.5) {
-                    fade(m2, m1);
+
+                if (cur === 1) {
+                    document.getElementById('v1').play();
+                    if (!typed2) {
+                        typeEffect(TXT.p2, "type-p2", 30);
+                        typed2 = true;
+                    }
+                    if (m1.volume > 0.5) fade(m1, m2);
+                } else if (cur === 0 || cur === 2) {
+                    if (m2.volume > 0.5) fade(m2, m1);
                 }
             }
         };
