--- a/index.html
+++ b/index.html
@@ -105,20 +105,22 @@
             txt2: "E cá estamos minha princesaa, no nosso nono mês e foram definitivamente os melhores da minha vida, e, o mais legal é que simplesmente aconteceu. No começo, eram apenas <span class='c-blue'>olhares</span>, mas de repente se tornaram olhares cheio de sentimentos e <span class='c-gold'>intensidade</span>. Nossas <span class='c-blue'>conversas</span> construíram algo que eu nem sabia que precisava tanto. É engraçado como a gente se encaixa. Você tem esse jeito de tornar as coisas <span class='c-blue'>leves</span>. <br><br>Não estou aqui para te dar promessas vazias meu pedacinho de <span class='c-gold'>ouro</span>. Quero te dar o meu melhor. Você é minha <span class='c-red'>Princesa</span>, minha <span class='c-green'>menina</span> teimosa favorita e a dona do meu <span class='c-blue'>sorriso</span>. <span class='c-red'>eu te amo</span> de um jeito que as palavras mal conseguem alcançar... <br><br>Que nosso nono mês seja repleto de <span class='c-green'>felicidade</span>, alegria, <span class='c-blue'>sorrisos bobos</span> e muita <span class='c-gold'>maturidade</span>, quero te oferecer o que ninguém nunca ofereceu, quero ser o que niguém nunca conseguiu ser, eu quero ser o cara que fará parte da sua vida e também <span class='c-blue'>diferença</span> na mesma, eu quero ser alguém capaz de fazer você esquecer todas as dores e passar a ser o homem que seu pai não foi, sem querer julgar sua familia. Eu ainda quero fazer você adormecer em meu braços enquanto nossos <span class='c-gold'>filhos</span> dormem ao lado, quero que venham 1, 2, 3 e diversos anos juntos. <span class='c-red'>EU TE AMO IMENSAMENTE MEU ANJINHO</span>"
         };
 
-        let current = 0, hasTyped = false;
+        let current = 0, hasTyped = false, fadeInterval;
         const pages = document.querySelectorAll('.page');
         const music = document.getElementById('bg-music');
         const video = document.getElementById('main-video');
 
-        function fadeAudio(audio, target, duration) {
-            const initial = audio.volume;
-            const step = (target - initial) / (duration / 50);
-            const interval = setInterval(() => {
+        function fadeAudio(audio, target) {
+            clearInterval(fadeInterval);
+            const step = target > audio.volume ? 0.05 : -0.05;
+            fadeInterval = setInterval(() => {
                 let next = audio.volume + step;
                 if ((step > 0 && next >= target) || (step < 0 && next <= target)) {
                     audio.volume = target;
-                    clearInterval(interval);
-                } else { audio.volume = next; }
+                    clearInterval(fadeInterval);
+                } else {
+                    audio.volume = Math.min(1, Math.max(0, next));
+                }
             }, 50);
         }
 
@@ -178,10 +180,10 @@
                 document.getElementById('p-bar').style.width = ((current + 1)/pages.length)*100 + "%";
                 
                 if(current === 1) { 
-                    fadeAudio(music, 0, 1000); video.play(); 
+                    fadeAudio(music, 0); video.volume = 1; video.play(); 
                     if(!hasTyped) { type(CONFIG.txt2, "type-p2", 20); hasTyped = true; } 
-                } else if(prev === 1) {
-                    video.pause(); fadeAudio(music, 1, 1500);
+                } else {
+                    if(prev === 1) { video.pause(); fadeAudio(music, 1); }
                 }
             },
             openModal: (s, t) => { document.getElementById('modal-img').src = s; document.getElementById('modal-text').innerText = t; document.getElementById('photo-modal').style.display = 'flex'; },
